<?xml version="1.0"?>
<package format="3">
  <name>talker_cpp</name>
  <version>0.0.0</version>
  <description>Minimal C++ talker for ROS2</description>
  <maintainer email="ssk@example.com">SSK</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
