<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>talker_listener</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="shrungalkulkarni30@gmail.com">sskspy</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
<test_depend>launch_testing</test_depend><test_depend>launch_testing_ros</test_depend><test_depend>pytest</test_depend><test_depend>pytest-mock</test_depend></package>